fix page content on custom layout to align left

--- a/assets/css/pulsair.css
+++ b/assets/css/pulsair.css
@@ -76,7 +76,6 @@ version 3.0 (http://www.gnu.org/licenses/gpl-3.0.html)
     padding: 51.2px 0px;
     padding: 3.2rem 0rem;
     padding: 12% 10% 12%;
-    max-width: 45em;
     font-size: 16px;
     line-height: 24px; }
   .pa-hero__title {
