--- a/assets/css/sass/components/_hero.scss
+++ b/assets/css/sass/components/_hero.scss
@@ -10,7 +10,6 @@
     position: relative;
     padding: $space-double 0rem;
     padding: 12% 10% 12%;
-    max-width: 45em;
     font-size: 16px;
     line-height: 24px;
   }
